@@ -435,8 +435,6 @@
   <block id="2371c65768dba03d44190d2797940527" category="list-text">*Promedio de reducción de datos*: Elija entre los tres ratios comunes de reducción de datos. Seleccione «1:1 - Sin reducción», «1:1,25 - 20% de reducción» o «1:1,5 - 33% de reducción».</block>
   <block id="905bff561253ba917bae9754d8ea5aa3" category="paragraph">Tenga en cuenta que si selecciona una cantidad inferior al 20%, no podrá crear snapshots de volúmenes para protección y backups a largo plazo.</block>
   <block id="695c53d6a8635c5bd280e1390644dcd5" category="list-text">*Protección de instantáneas de VM*: Habilita esta opción para proteger las VM con instantáneas.</block>
-  <block id="989b80d51d89a9c4e98f8e9d93a8b430" category="list-text">En la página *Revisar volúmenes EC2*, revise la información de la VM, las reglas de clasificación de volúmenes, las asignaciones de volúmenes y la lista de volúmenes que se migrarán como parte de la implementación.</block>
-  <block id="0bd2351ba13aaa50e485f5d6ed8991d1" category="list-text">En la página *Revisar almacenamiento de instancias*, revisa las instancias EC2 y los volúmenes asignados a diferentes clústeres de FSX para ONTAP.</block>
   <block id="80a8fb685950a12df8093b0708b54241" category="paragraph">La parte superior de la página describe el coste mensual para todas las máquinas virtuales implementadas y los sistemas de archivos de FSx para ONTAP. Puedes ampliar cada sección para ver detalles sobre la «configuración recomendada del sistema de archivos de Amazon FSx para ONTAP», «desglose de costes estimado», «configuración de volúmenes», «suposiciones de dimensionamiento» y «renuncias de responsabilidad técnicas».</block>
   <block id="772ab2cb66607567ceddf170a9c148d1" category="doc">Crea un plan de puesta en marcha para VMware Cloud en AWS mediante el asesor de migración</block>
   <block id="be0af0f3e1f270dc982344a36c5f734f" category="paragraph">Al realizar la migración a VMware Cloud, puede utilizar el asesor de migración para crear un plan de puesta en marcha para las siguientes situaciones:</block>
@@ -471,7 +469,23 @@
   <block id="381900c88e88ebdef33aeaaba326b5d9" category="sidebar">Migrar a VMware Cloud en AWS</block>
   <block id="aaa94acfa678f349154ecc14f4c48e40" category="sidebar">Inicio rápido para migrar a VMware Cloud en AWS</block>
   <block id="8ca85249d2f6a1036c376d3281e10cd7" category="sidebar">Inicio rápido para migrar a Amazon EC2</block>
-  <block id="71f8c32a3420de60438e9dc0e0e66db0" category="list-text">En el mosaico de cargas de trabajo de VMware, selecciona *Acceso y plan* y luego selecciona *Migración a la computación nativa de AWS*. Se mostrará la página principal del asesor de migración de VMware.</block>
   <block id="15cd8c066461a2900cdb71fc53b09930" category="list-text">Seleccione *Descargar plan &gt; Implementación de almacenamiento de instancias* para descargar el plan de implementación de almacén de datos externo en formato .csv para que pueda usarlo para crear su nueva infraestructura de datos inteligente basada en la nube.</block>
   <block id="74f9ca267e4b5efb489a146170987dbb" category="list-text">Seleccione *Descargar plan &gt; Informe de plan* para descargar el plan de implementación en formato .pdf y así poder distribuir el plan para su revisión.</block>
+  <block id="2792e29ba30bdded6461ac9b9f0816a4" category="doc">Mejoras en el asesor de migración de VMware</block>
+  <block id="bdcdfcdfcb9e0d2084c9c9ff58163d0b" category="paragraph">Esta versión de Workload Factory para VMware incluye mejoras en las funcionalidades y la estabilidad, así como la capacidad de importar y exportar planes de migración cuando se utiliza el asesor de migración de VMware.</block>
+  <block id="2dbb83c0d88f8aa5c12c5445b2b248ee" category="paragraph"><block ref="2dbb83c0d88f8aa5c12c5445b2b248ee" category="inline-link-rx"></block></block>
+  <block id="aadc951fc26ce017c445dc2a4fc12d5d" category="list-text">En el mosaico de cargas de trabajo de VMware, selecciona *Acceso y plan* y luego selecciona *Migración a la computación nativa de AWS*. Aparece la pantalla de presentación del asesor de migración de VMware.</block>
+  <block id="34229287aee7a67f52f7e30d46d92cf7" category="paragraph">Consulte la información para obtener más información sobre las ventajas del asesor de migración.</block>
+  <block id="3389e3985ea11023e4391a5a8e11e3c2" category="list-text">Cuando esté listo, seleccione *Vamos a empezar*.</block>
+  <block id="26c8e4d27d311b3dd56356d32a6bace5" category="list-text">En la página *Revisar asignación de volumen EC2*, revise la información de la VM, las reglas de clasificación de volúmenes, las asignaciones de volúmenes y la lista de volúmenes que se migrarán como parte de la implementación.</block>
+  <block id="84c81acf71fd02d43242aed2387e9584" category="list-text">En la página *Revisar asignación de almacenamiento de instancias*, revise las instancias EC2 y los volúmenes asignados a diferentes clústeres de FSX para ONTAP.</block>
+  <block id="0c9d619e17114784eebf5b4294145625" category="list-text">En la página *Revise su plan de migración*, revise el costo mensual estimado para todas las VM que planea migrar.</block>
+  <block id="ef3c7f794852a9bd24d0e9c87cce7d80" category="paragraph">La parte superior de la página calcula el ahorro mensual necesario para los sistemas de archivos de FSx para ONTAP y los volúmenes de EBS. Puede expandir cada sección para ver los detalles de la configuración del sistema de archivos sugerida, el desglose de ahorros estimados, las suposiciones y las renuncias técnicas.</block>
+  <block id="d30cddb743993744da7757e5dc8d38a4" category="paragraph">Si está planificando un nuevo despliegue similar a un plan de despliegue existente que ha utilizado en el pasado, puede importar ese plan, realizar cambios y, a continuación, guardarlo como un nuevo plan de despliegue.</block>
+  <block id="9666bbc427ef045e019206b1e73f8b26" category="list-text">En el mosaico de cargas de trabajo de VMware, selecciona *Acceso y plan* y luego selecciona *Migración a la computación nativa de AWS*.</block>
+  <block id="32a33bea1503730affb121be4db1856d" category="list-text"><block ref="db832e36fbdf71ec25bff4aa1993346d" category="inline-image-macro-rx" type="image"></block>Seleccione y seleccione el archivo de plan .json existente que desea importar en el asesor de migración.</block>
+  <block id="381cf8f0eafd87b02005eb434ff3e0f0" category="paragraph">Aparece la página Revisar plan.</block>
+  <block id="eb5a861bf39cbc8f1c04a5223199b242" category="list-text">Puede seleccionar *Anterior* para acceder a páginas anteriores y modificar la configuración del plan como se describe en la sección anterior.</block>
+  <block id="a788f47234ccaf5adf5a6ea422148ef6" category="list-text">Una vez que haya personalizado el plan según sus necesidades, puede guardar el plan o descargar el informe del plan como un archivo PDF.</block>
+  <block id="123186fd98b69e2b3d463c83c49edfe7" category="section-title">19 de septiembre de 2024</block>
 </blocks>
