@@ -1,0 +1,11 @@
+= Mejoras en el asesor de migración de VMware
+:allow-uri-read: 
+
+
+
+
+=== Mejoras en el asesor de migración de VMware
+
+Esta versión de Workload Factory para VMware incluye mejoras en las funcionalidades y la estabilidad, así como la capacidad de importar y exportar planes de migración cuando se utiliza el asesor de migración de VMware.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-onboarding-advisor-native.html["Cree un plan de implementación para Amazon EC2 con el asesor de migración"]
