@@ -15,6 +15,18 @@ Descubre las novedades del componente asesor de migración de VMware Cloud de Wo
 
 
 
+== 19 de septiembre de 2024
+
+
+
+=== Mejoras en el asesor de migración de VMware
+
+Esta versión de Workload Factory para VMware incluye mejoras en las funcionalidades y la estabilidad, así como la capacidad de importar y exportar planes de migración cuando se utiliza el asesor de migración de VMware.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-onboarding-advisor-native.html["Cree un plan de implementación para Amazon EC2 con el asesor de migración"]
+
+
+
 == 1 de septiembre de 2024
 
 
